fix: reescrevendo algumas classes para melhorar a legibilidade do codigo

--- a/source/components/feedback/feedback.styl
+++ b/source/components/feedback/feedback.styl
@@ -89,7 +89,7 @@
   top: 190px;
 }
 
-.isMobile {
+.mobilePosition {
   bottom: 10px;
   left: 50%;
   position: fixed;
